update dependencies and add yarn

--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "sa-tseltal",
-  "version": "1.0.0",
-  "description": "Exercism exercises in Javascript.",
-  "author": "Mauricio Gonzalez",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/mauricioinaz/say-tseltal/"
-  },
+  "name": "sayTseltal",
+  "version": "1.0.1",
+  "description": "Given a number, spell out that number in Tzeltal-Mayan language.",
+  "main": "sayTseltal.js",
+  "repository": "https://github.com/mauricioinaz/sayTseltalJS.git",
+  "author": "mauricioinaz <mauricio.glez@gmail.com>",
+  "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
-    "babel-plugin-transform-builtin-extend": "^1.1.2",
-    "babel-preset-env": "^1.7.0",
     "eslint": "^6.3.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
@@ -25,7 +24,7 @@
   "babel": {
     "presets": [
       [
-        "env",
+        "@babel/env",
         {
           "targets": [
             {
@@ -33,19 +32,6 @@
             }
           ]
         }
-      ]
-    ],
-    "plugins": [
-      [
-        "babel-plugin-transform-builtin-extend",
-        {
-          "globals": [
-            "Error"
-          ]
-        }
-      ],
-      [
-        "transform-regenerator"
       ]
     ]
   },
@@ -72,7 +58,5 @@
       "import/prefer-default-export": "off",
       "import/no-default-export": "off"
     }
-  },
-  "license": "MIT",
-  "dependencies": {}
+  }
 }
