--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "@mauricioinaz/say-tseltal",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Convert integers into Mayan-Tseltal language",
   "author": "Mauricio Gonzalez",
   "repository": {
     "type": "git",
     "url": "https://github.com/mauricioinaz/say-tseltal/"
   },
-    "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/cli": "^7.8.4",
     "@babel/core": "^7.8.4",
